2001-10-29  Vince Darley <vincentdarley@sourceforge.net>
        * win/makefile.vc: installation is better.
	* library/vfsUrl.tcl: improved urltype mounting.  The following
	will now work in all cases:
	% vfs::urltype::Mount ftp
	% set listing [glob -dir ftp://ftp.scriptics.com/pub *]
	...
	% vfs::urltype::Mount http
	% set fd [open http://sourceforge.net/projects/tcl]
	% set contents [read $fd] ; close $fd
	...
	
2001-09-27  Vince Darley <vincentdarley@sourceforge.net>
	* library/mk4vfs.tcl: Update from Jean-Claude Wippler
	* library/vfsUtils.tcl:
	* generic/vfs.c: Moved 'list volumes' functionality
	entirely into C from Tcl (faster and easier for tclkit
	to make proper use of).  This required the addition
	of a '-volume' flag to the mount/unmount commands, and
	meant we can remove the 'mountschanged' subcommand.

2001-09-07  Vince Darley <vincentdarley@sourceforge.net>
	* generic/vfs.c: Fixed '==' error
	* doc/vfs.n: Improved docs.
	* library/mk4vfs.tcl: Better mk support

2001-09-06  Vince Darley <vincentdarley@sourceforge.net>
	* Further minor improvements, unfortunately requires
	new release of Tcl from cvs (today).  Also added
	'install' target to vc++ makefile.

2001-08-29  Vince Darley <vincentdarley@sourceforge.net>
	* can now mount root volumes which end in separator
	characters (such as 'ftp://').  The code handles path
	separation in such cases.  This means the 'urltype'
	vfs now works (the 8-22 changes below didn't quite
	complete the job).
	This requires the latest 8.4a4 release from cvs.
	
2001-08-22  Vince Darley <vincentdarley@sourceforge.net>
	* added ability to treat entire urls as file paths, so
	we can mount 'ftp://' as a root volume and examine its
	contents.  This requires the latest 8.4a4 release from cvs.
	
2001-08-13  Vince Darley <vincentdarley@sourceforge.net>
	* ftp vfs works reasonably well now; try:
	% package require vfs
	% vfs::ftp::Mount ftp://ftp.ucsd.edu/pub/alpha/ local
	% cd local ; cd tcl ; source vfsTest.tcl
	